some format fix